<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>witmotion_ros</name>
  <version>0.0.0</version>
  <description>Witmotion IMU sensor driver for ROS</description>
  <maintainer email="pi@todo.todo">pi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>tf2_geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>qtbase5-dev</depend>
  <depend>libqt5-serialport</depend>
  <depend>boost</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
